; ModuleID = '/home/carl/AnghaBench/darwin-xnu/security/extr_mac_process.c_mac_cred_label_update.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/security/extr_mac_process.c_mac_cred_label_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.label = type { i32 }
%struct.TYPE_3__ = type { i32 }

@CRF_MAC_ENFORCE = common dso_local global i32 0, align 4
@cred_label_update = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mac_cred_label_update(i32 %0, %struct.label* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.label*, align 8
  %5 = alloca %struct.TYPE_3__*, align 8
  store i32 %0, i32* %3, align 4
  store %struct.label* %1, %struct.label** %4, align 8
  %6 = load i32, i32* %3, align 4
  %7 = call %struct.TYPE_3__* @posix_cred_get(i32 %6)
  store %struct.TYPE_3__* %7, %struct.TYPE_3__** %5, align 8
  %8 = load i32, i32* @CRF_MAC_ENFORCE, align 4
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = or i32 %11, %8
  store i32 %12, i32* %10, align 4
  %13 = load i32, i32* @cred_label_update, align 4
  %14 = load i32, i32* %3, align 4
  %15 = load %struct.label*, %struct.label** %4, align 8
  %16 = call i32 @MAC_PERFORM(i32 %13, i32 %14, %struct.label* %15)
  ret void
}

declare dso_local %struct.TYPE_3__* @posix_cred_get(i32) #1

declare dso_local i32 @MAC_PERFORM(i32, i32, %struct.label*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
